default/objects/Account_GFN_Report_Email_Params__c/Account_GFN_Report_Email_Params__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Params for mailing an Account Report to GFN</description>
    <label>Account GFN Report Email Params</label>
</CustomObject>