default/objects/Account_GFN_Report_Email_Params__c/fields/Attach_format__c.field-meta.xml
<CustomField>
    <fullName>Attach_format__c</fullName>
    <description>A format for an attached file (starts from &quot;.&quot;)</description>
    <label>Attach format</label>
    <length>10</length>
    <type>Text</type>
</CustomField>