default/objects/Account_GFN_Report_Email_Params__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <description>The report will send on this email</description>
    <label>Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>