default/objects/Account_GFN_Report_Email_Params__c/fields/Email_body__c.field-meta.xml
<CustomField>
    <fullName>Email_body__c</fullName>
    <description>This text will be in an email body</description>
    <label>Email body</label>
    <length>250</length>
    <type>Text</type>
</CustomField>