default/objects/Account_GFN_Report_Email_Params__c/fields/Test_mode__c.field-meta.xml
<CustomField>
    <fullName>Test_mode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Enabled the report will send on Robot email and on Test email from custom settings (DEBUG MODE)</description>
    <inlineHelpText>If Enabled the report will send on Robot email and on Test email from custom settings (DEBUG MODE)</inlineHelpText>
    <label>Test mode</label>
    <type>Checkbox</type>
</CustomField>