default/objects/Account_GFN_Report_Email_Params__c/fields/Test_mode_email__c.field-meta.xml
<CustomField>
    <fullName>Test_mode_email__c</fullName>
    <description>Test email for Test mode (DEBUG EMAIL)</description>
    <inlineHelpText>Test email for Test mode (DEBUG EMAIL)</inlineHelpText>
    <label>Test mode email</label>
    <type>Email</type>
</CustomField>